--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <script type="module" defer src="app.js"></script>
     <title>Country Information - World Regions</title>
 </head>
 <body>
+<main>
+    <img class="world-map" src="assets/world_map.png">
+<!--    Ul om een data te injecteren-->
+    <ul id="countries-list">
 
+    </ul>
+
+    <span id="error-message"></span>
+</main>
 </body>
 </html>
